<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaCenter">

    <Button
        android:id="@+id/CameraBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/DrawerBtn"/>

    <Button
        android:id="@+id/DrawerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer"
        app:layout_constraintBottom_toTopOf="@+id/MusicBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CameraBtn" />

    <Button
        android:id="@+id/MusicBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player"
        app:layout_constraintBottom_toTopOf="@+id/WebpageBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DrawerBtn"/>

    <Button
        android:id="@+id/WebpageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/www"
        app:layout_constraintTop_toBottomOf="@+id/MusicBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

